--- a/src/components/LineUI.scss
+++ b/src/components/LineUI.scss
@@ -25,7 +25,6 @@
             width: 6px;
             height: 6px;
             pointer-events: auto;
-            z-index: 50;
             visibility: hidden;
             &.line-handler-src {
                 background-color: rgba(144, 238, 144, 0.5);
